--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,5 +105,8 @@
         An error has occurred. Please, try again by clicking REFRESH
     </string>
 
+    <string name="onTheMap">Map</string>
+    <string name="action_share">share</string>
+
 
 </resources>
